src/objects/GDP_Agency_Stats__c.object
<CustomObject>
    <description>Keep track of global agency stats contained in the data base</description>
    <fields>
        <fullName>Agencies_in_Default_6__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Agencies in Default (6)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agencies_in_Default__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Agencies in Default (5)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Airline_Sales_Offices__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Airline Sales Offices</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cargo_Agencies__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cargo Agencies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <description>Country, State, Province, Territory ISO code</description>
        <label>Code</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emails__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Emails</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>General_Sales_Agents__c</fullName>
        <defaultValue>0</defaultValue>
        <label>General Sales Agents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Geo_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Geo Detail</label>
        <referenceTo>GDP_Geo_Detail__c</referenceTo>
        <relationshipLabel>GDP Agency Stats</relationshipLabel>
        <relationshipName>GDP_Agency_Stats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IATA_ISO_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IATA ISO Country</label>
        <referenceTo>IATA_ISO_Country__c</referenceTo>
        <relationshipLabel>GDP Agency Stats</relationshipLabel>
        <relationshipName>GDP_Agency_Stats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Used for upsert by scheduled task</inlineHelpText>
        <label>Key</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Locations_No_Cargo__c</fullName>
        <formula>Locations__c -  Cargo_Agencies__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Locations No Cargo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Locations__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <picklist>
            <picklistValues>
                <fullName>Country</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU Territories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA Provinces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub Continent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stats_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Stats Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sub_Continent__c</fullName>
        <formula>Geo_Detail__r.Sub_Continent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Continent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Travel_Agencies__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Travel Agencies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Inform the time-lapse for the snapshot: daily or monthly</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unique_Emails__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unique Emails</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>GDP Agency Stats</label>
    <listViews>
        <fullName>All_Daily</fullName>
        <columns>NAME</columns>
        <columns>IATA_ISO_Country__c</columns>
        <columns>Type__c</columns>
        <columns>Scope__c</columns>
        <columns>Locations__c</columns>
        <columns>Emails__c</columns>
        <columns>Unique_Emails__c</columns>
        <columns>Airline_Sales_Offices__c</columns>
        <columns>Cargo_Agencies__c</columns>
        <columns>General_Sales_Agents__c</columns>
        <columns>Travel_Agencies__c</columns>
        <columns>Stats_Date__c</columns>
        <columns>Code__c</columns>
        <columns>Key__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Daily</value>
        </filters>
        <label>All Daily</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Monthly</fullName>
        <columns>NAME</columns>
        <columns>IATA_ISO_Country__c</columns>
        <columns>Type__c</columns>
        <columns>Scope__c</columns>
        <columns>Locations__c</columns>
        <columns>Emails__c</columns>
        <columns>Unique_Emails__c</columns>
        <columns>Airline_Sales_Offices__c</columns>
        <columns>Cargo_Agencies__c</columns>
        <columns>General_Sales_Agents__c</columns>
        <columns>Travel_Agencies__c</columns>
        <columns>Stats_Date__c</columns>
        <columns>Code__c</columns>
        <columns>Key__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Monthly</value>
        </filters>
        <label>All Monthly</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Daily_Countries</fullName>
        <columns>NAME</columns>
        <columns>IATA_ISO_Country__c</columns>
        <columns>Type__c</columns>
        <columns>Scope__c</columns>
        <columns>Locations__c</columns>
        <columns>Emails__c</columns>
        <columns>Unique_Emails__c</columns>
        <columns>Airline_Sales_Offices__c</columns>
        <columns>Cargo_Agencies__c</columns>
        <columns>General_Sales_Agents__c</columns>
        <columns>Travel_Agencies__c</columns>
        <columns>Stats_Date__c</columns>
        <columns>Code__c</columns>
        <columns>Key__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Daily</value>
        </filters>
        <filters>
            <field>Scope__c</field>
            <operation>equals</operation>
            <value>Country</value>
        </filters>
        <label>Daily_Countries</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Daily_States_Provinces</fullName>
        <columns>NAME</columns>
        <columns>IATA_ISO_Country__c</columns>
        <columns>Type__c</columns>
        <columns>Scope__c</columns>
        <columns>Locations__c</columns>
        <columns>Emails__c</columns>
        <columns>Unique_Emails__c</columns>
        <columns>Airline_Sales_Offices__c</columns>
        <columns>Cargo_Agencies__c</columns>
        <columns>General_Sales_Agents__c</columns>
        <columns>Travel_Agencies__c</columns>
        <columns>Stats_Date__c</columns>
        <columns>Code__c</columns>
        <columns>Key__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Daily</value>
        </filters>
        <filters>
            <field>Scope__c</field>
            <operation>equals</operation>
            <value>AU Territories,CA Provinces,US States</value>
        </filters>
        <label>Daily_States_Provinces</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Daily_Sub_Continent</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Travel_Agencies__c</columns>
        <columns>Emails__c</columns>
        <columns>Unique_Emails__c</columns>
        <columns>Cargo_Agencies__c</columns>
        <columns>General_Sales_Agents__c</columns>
        <columns>Airline_Sales_Offices__c</columns>
        <columns>Locations__c</columns>
        <columns>Stats_Date__c</columns>
        <columns>Key__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Daily</value>
        </filters>
        <filters>
            <field>Scope__c</field>
            <operation>equals</operation>
            <value>Sub Continent</value>
        </filters>
        <label>Daily_Sub Continent</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>GS{00000}</displayFormat>
        <label>GDP Stats Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GDP Agency Stats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>